added function calling. works with real OpenAI. not with Anyscale :-(